# Colhidor

./: CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  log_downloads.py
.github/workflows/: log_downloads.yml  release.yml  rust.yml
.zed/: settings.json
collector/: Cargo.toml
collector/src/: lib.rs  main.rs
collector/src/database/: mod.rs
collector/src/sensors/: disk.rs  gpu.rs  mod.rs  network.rs  process.rs  processes.rs  ram.rs
collector/src/sensors/cpu/: estimation.rs  linux_cpu.rs  mod.rs
collector/src/sensors/cpu/windows_cpu/: driver.rs  mod.rs
collector/src/sensors/tcp_connections/: linux_tcp_connections.rs  mac_tcp_connections.rs  mod.rs  windows_tcp_connections.rs
common/: Cargo.toml
common/src/: lib.rs  types.rs  utils.rs
common/src/database/: entries.rs  mod.rs
doc/: sensor_sources.md
mqtt/: Cargo.toml
mqtt/src/: lib.rs
src/: main.rs
src/collector/: mod.rs
src/collector/sensors/: data.rs  disk.rs  gpu.rs  mod.rs  network.rs  processes.rs  ram.rs
src/collector/sensors/cpu/: estimation.rs  linux_cpu.rs  mod.rs
src/collector/sensors/cpu/windows_cpu/: mod.rs
src/collector/sensors/tcp_connections/: linux_tcp_connections.rs  mac_tcp_connections.rs  mod.rs  windows_tcp_connections.rs
src/publisher/: mod.rs  mqtt.rs
src/utils/: mod.rs
ui/src/: app.rs  message.rs  translations.rs
ui/src/components/: sensor_state.rs
ui/src/pages/: dashboard.rs
