[package]
name = "colhidor"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
build = "build.rs"
autobins = false

[workspace]
resolver = "3"
members = ["collector", "common", "mqtt"]

[workspace.package]
version = "1.0.2"
authors = [
  "Gabin DUDILLIEU <gabin.dudillieu@liant.dev>",
  "Roland LAURES <roland@liant.dev>",
  "Damien PHILIPPE <damien.philippe@edu.esiee.fr>",
  "Paul MALLARD <paul.mallard@edu.esiee.fr>"
]
edition = "2024"
description = "Colhidor is a tool for collecting consumption data and sending it over the MQTT protocol."
readme = "README.md"
repository = "https://github.com/Liant-SASU/Colhidor"
license = "GPL-3.0"
keywords = [
  "carbon",
  "emissions",
  "energy",
  "monitoring",
  "power",
  "sustainability"
]

[[bin]]
name = "Colhidor"
path = "src/main.rs"

[dependencies]
bpaf = { version = "0.9.26", features = ["derive", "dull-color"] }
collector = { path = "collector" }
common = { path = "common" }
tokio = "1.52.3"

[target."cfg(windows)".build-dependencies]
tokio = "1.52.3"
winres = "0.1"

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "unwind"
codegen-units = 1
